Image-ref step output, Firebase preview-channel CORS, docs refresh (#5)
* fix(cors): allow Firebase Hosting preview channel origins

Browsers attach an Origin header to same-origin POSTs proxied through the
Firebase Hosting /api/** rewrite. The exact-match allowlist (craftedbyk.com,
localhost:3000) rejected the dynamic per-PR preview subdomains with 403, so
puzzle generation stalled ("Generating...") on preview deploys while GETs
(no Origin header) succeeded.

Switch to setAllowedOriginPatterns and add https://craftedbyk-prod--*.web.app
so preview channels are covered. Patterns remain credential-safe (no bare "*").

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* style: apply spotless formatting to CorsConfig

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* ci: pass image ref via step output instead of $GITHUB_ENV

Compose step emits the image ref once to $GITHUB_OUTPUT; build/push/deploy
read steps.compose-image.outputs.image. Drops the dead $GITHUB_ENV write
and the duplicated path string.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* docs: refresh README structure/CI/scripts, add CLAUDE.md

README: correct package to com.craftedbyk, -Ddocker.image.name override,
public-access + image-ref CI notes, Scripts section. CLAUDE.md: capture
non-obvious gotchas (spotless gate, JDK 25/26, deploy-on-main, GCP secrets).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>